# continuous-eval

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PR_DESCRIPTION.md  README.md  faithfulness_results.jsonl  generation_evaluator.py  jsonl_converter.py  prova_dataset.py  prova_hybtrid.py  pyproject.toml
.github/workflows/: azure-static-web-apps-calm-bay-0d448f910.yml  azure-static-web-apps-red-meadow-00dc81510.yml  codeflash-optimize.yaml  deploy_docs.yml
continuous_eval/: __init__.py  data_downloader.py  dataset.py  datatypes.py  llm_factory.py  simple_dataset_generator.py
continuous_eval/api/: relari_client.py
continuous_eval/classifiers/: __init__.py  ensemble.py  hybrid.py  utils.py
continuous_eval/eval/: __init__.py  dataset.py  logger.py  manager.py  metrics.py  modules.py  pipeline.py  result_types.py  runner.py  tests.py  types.py  utils.py
continuous_eval/evaluators/: __init__.py  base_evaluator.py  generation_evaluator.py  retrieval_evaluator.py  utils.py
continuous_eval/generators/: __init__.py  simple.py
continuous_eval/llms/: __init__.py  anthropic.py  anthropic_bedrock.py  azure.py  azure_openai.py  base.py  bedrock.py  cohere.py  google.py  openai.py
continuous_eval/metrics/: __init__.py  base.py  code_deterministic_metrics.py  generation_LLM_based_metrics.py  generation_deterministic_metrics.py  generation_semantic_metrics.py  retrieval_LLM_based_metrics.py  retrieval_matching_strategy.py  retrieval_precision_recall_f1.py  retrieval_ranked_metrics.py
continuous_eval/metrics/_utils/: simple_tokenizer.py
continuous_eval/metrics/base/: __init__.py  llm.py  metric.backup  metric.py  probabilistic.py  prompt.py  response_type.py
continuous_eval/metrics/classification/: __init__.py  classification.py
continuous_eval/metrics/code/: __init__.py
continuous_eval/metrics/code/python/: __init__.py  code_deterministic_metrics.py  run_tests.sh  test_code_deterministic_metrics.py
continuous_eval/metrics/code/sql/: __init__.py  deterministic.py  llm.py  sql_deterministic_metrics.py
continuous_eval/metrics/code/sql/prompts/: sql_correctness_sys.jinja2  sql_correctness_user.jinja2
continuous_eval/metrics/custom/: __init__.py  custom_metric.py  custom_metric_sys.jinja2  custom_metric_sys_probabilistic.jinja2  custom_metric_user.jinja2
continuous_eval/metrics/generation/text/: __init__.py  bert.py  custom.py  deterministic.py  llm_based.py  semantic.py  utils.py
continuous_eval/metrics/generation/text/prompts/: ans_correctness_sys.jinja2  ans_correctness_user.jinja2  ans_relevance_sys.jinja2  ans_relevance_user.jinja2  faithfulness_sys.jinja2  faithfulness_user.jinja2  style_consistency_sys.jinja2  style_consistency_user.jinja2
continuous_eval/metrics/integrations/: dspy.py
continuous_eval/metrics/retrieval/: __init__.py  llm_based.py  matching_strategy.py  precision_recall_f1.py  ranked.py  simple_tokenizer.py  tokens.py
continuous_eval/metrics/retrieval/prompts/: context_coverage_sys.jinja2  context_coverage_user.jinja2  context_precision_sys.jinja2  context_precision_user.jinja2
continuous_eval/metrics/tools/: match.py
continuous_eval/metrics/utils/: simple_tokenizer.py  smart_tokenizer.py
continuous_eval/utils/: generic.py  telemetry.py  types.py
docs/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  sql_metrics.md
docs/src/components/: ThemeSelect.astro
docs/src/content/: config.ts
docs/src/content/docs/: index.mdx
docs/src/content/docs/Evaluation/: retrieval.md
docs/src/content/docs/classification/: classifier.md  conformal_prediction.md
docs/src/content/docs/dataset/: evaluator.md  example_datasets.md  simple_dataset_generator.md
docs/src/content/docs/evaluators/: dataset.md  generation_evaluator.md  retrieval_evaluator.md  simple_dataset_generator.md
docs/src/content/docs/examples/: 0_single_metric.md  1_simple_rag_evaluation.mdx  2_complex_rag_evaluation.mdx  (+8 more)
docs/src/styles/: custom.css
examples/: correctness_det_sem.py  dataset_generation.py  datasets.py  ensemble_metric.py  ensemble_metric_with_judicator.py  evaluation_on_dataset.py  evaluators.py  generation_evaluator.py  getting_started.py  llm_custom_criteria.py  modular_evaluation.py  retrieval_evaluator.py  simple_dataset_generation.py  single_metric.py
metrics/: classification_metrics.py
tests/: classification_metrics_test.py  code_metrics_test.py  conformal_classifier_test.py  custom_metric_test.py  dataset_test.py  ensemble_test.py  evaluation_test.py  evaluator_test.py  generation_metrics_test.py  generation_semantic_test.py  integrations_test.py  llm_base_metric_test.py  llm_factory_test.py  llm_test.py  retrieval_metrics_test.py  simple_dataset_generator_test.py  simple_generator_test.py  test_bubble_sort.py  test_generation_evaluator.py  test_generation_metrics.py  test_retieval_evaluator.py  test_retrieval_metrics.py  test_sql_deterministic_metrics.py  utils.py
tests/data/: correctness_sm.jsonl  invalid.jsonl  retrieval_sm.jsonl
tests/helpers/: dummy_dataset.py  dummy_metric.py  example_datum.py  utils.py
(+71 files in other folders)
