[tool.poetry]
name = "continuous-eval"
version = "0.3.8"
description = "Open-Source Evaluation for GenAI Application Pipelines."
authors = ["Yi Zhang <yi@relari.ai>", "Pasquale Antonante <pasquale@relari.ai>"]
readme = "README.md"
license = "Apache-2.0"
packages = [{include = "continuous_eval"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
python-dotenv = "^1.0.0"
nltk = "^3.8.1"
rouge = "^1.0.1"
openai = "^1.3.7"
mapie = "^0.7.0"
imbalanced-learn = "^0.11.0"
pandas = "^2.1.4"
protobuf = "^4.23.4"
tqdm = "^4.66.1"
requests = "^2.31.0"
pyyaml = "^6.0.1"
appdirs = "^1.4.4"
munkres = "^1.1.4"
thefuzz = "^0.22.1"
sentencepiece = "^0.2.0"
tenacity = "^8.2.3"

langchain-community = {version = "^0.0.29", optional = true}
cohere = {version = "^4.54", optional = true}
boto3 = {version = "^1.34.70", optional = true}
google-generativeai = {version = "^0.3.1", optional = true}
anthropic = {version = "^0.7.7", optional = true}

[tool.poetry.group.semantic]
optional = true
[tool.poetry.group.semantic.dependencies]
torch = "^2.1.1"
transformers = "^4.35.2"
sentence-transformers = "^2.2.2"

[tool.poetry.group.generators]
optional = true
[tool.poetry.group.generators.dependencies]
unstructured ="^0.13.7"
tiktoken = "^0.7.0"
chromadb = "^0.5.0"
langchain-openai = "^0.1.7"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
pytest = "^7.4.3"
pre-commit = "^3.6.0"

[tool.poetry.extras]
langchain = ["langchain-community"]
anthropic = ["anthropic"]
bedrock = ["boto3"]
gemini = ["google-generativeai"]
cohere = ["cohere"]


[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
